# ChangeLog for www-client/mozilla-firefox-bin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.64 2006/12/21 18:53:00 tsunam Exp $

  21 Dec 2006; Joshua Jackson <tsunam@gentoo.org>
  mozilla-firefox-bin-1.5.0.9.ebuild:
  Stable x86; Security bug #156023

*mozilla-firefox-bin-2.0.0.1 (20 Dec 2006)

  20 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +mozilla-firefox-bin-2.0.0.1.ebuild:
  Version bump for anarchy

  19 Dec 2006; Peter Weller (welp) <welp@gentoo.org>
  mozilla-firefox-bin-1.5.0.9.ebuild:
  Stable on amd64 wrt bug #156023

  19 Dec 2006; Stefan Schweizer <genstef@gentoo.org> +mozilla-firefox-bin-1.5.0.9.ebuild:
  version bump thanks anarchy

  10 Nov 2006; <blubb@gentoo.org> mozilla-firefox-bin-1.5.0.8.ebuild:
  stable on amd64

  09 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  mozilla-firefox-bin-1.5.0.8.ebuild:
  stable x86, security bug #154434

  09 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  mozilla-firefox-bin-1.5.0.8.ebuild:
  Fix LINGUAS support.

*mozilla-firefox-bin-1.5.0.8 (08 Nov 2006)

  08 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  +mozilla-firefox-bin-1.5.0.8.ebuild:
  Version bump, bug 154434.

  25 Oct 2006; gothgirl <gothgirl@gentoo.org>
  mozilla-firefox-bin-2.0.ebuild:
  fixed URI for language packs, Thanks Tester

*mozilla-firefox-bin-2.0 (25 Oct 2006)

  25 Oct 2006; Joshua Jackson <tsunam@gentoo.org>
  +mozilla-firefox-bin-2.0.ebuild:
  Adding 2.0 bin as well

  09 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  -mozilla-firefox-bin-1.5.0.4.ebuild, -mozilla-firefox-bin-1.5.0.5.ebuild,
  -mozilla-firefox-bin-1.5.0.6.ebuild:
  Remove old versions.

  06 Oct 2006; Simon Stelling <blubb@gentoo.org>
  mozilla-firefox-bin-1.5.0.7.ebuild:
  fix DEPEND to use 32bit libstdc++-v3; bug 141497

  15 Sep 2006; Olivier Crête <tester@gentoo.org>
  mozilla-firefox-bin-1.5.0.7.ebuild: