@@ -1,0 +1,1 @@
+LDPATH="/opt/firefox"
