@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/mozilla-firefox-bin-1.5.0.9.ebuild,v 1.3 2006/12/21 18:53:00 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/mozilla-firefox-bin-1.5.0.9.ebuild,v 1.4 2006/12/22 15:40:54 gothgirl Exp $
 
 inherit eutils mozilla-launcher multilib mozextension
 
@@ -35,7 +35,6 @@ RDEPEND="|| ( (	x11-libs/libXrender
 		virtual/x11
 	)
 	x86? (
-		>=sys-libs/lib-compat-1.0-r2
 		>=x11-libs/gtk+-2.2
 		=virtual/libstdc++-3.3
 	)
@@ -121,6 +120,10 @@ src_install() {
 	# revdep-rebuild entry
 	insinto /etc/revdep-rebuild
 	doins ${FILESDIR}/10firefox-bin
+
+	# install ldpath env.d
+	insinto /etc/env.d
+	doins ${FILESDIR}/71firefox-bin
 }
 
 pkg_preinst() {
