@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.64 2006/12/21 18:53:00 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.65 2006/12/22 15:40:54 gothgirl Exp $
+
+  22 Dec 2006; <gothgirl@gentoo.org> +files/71firefox-bin,
+  mozilla-firefox-bin-1.5.0.9.ebuild, mozilla-firefox-bin-2.0.0.1.ebuild:
+  env.d script added, removed useless dep on lib-compat, via anarchy
 
   21 Dec 2006; Joshua Jackson <tsunam@gentoo.org>
   mozilla-firefox-bin-1.5.0.9.ebuild:
